re #6138 : prevent scrollbars
git-svn-id: svn://develop.studip.de/studip/trunk@37005 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/studygroup.less
+++ b/public/assets/stylesheets/less/studygroup.less
@@ -8,6 +8,8 @@ ul.studygroup-gallery {
         margin: 5px;
         width: 120px;
         height: 150px;
+        max-height: 150px;
+        overflow: hidden;
         display: inline-blocK;
         section {
             margin: 0 auto;
