--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5686,6 +5686,8 @@ ul.studygroup-gallery li {
   margin: 5px;
   width: 120px;
   height: 150px;
+  max-height: 150px;
+  overflow: hidden;
   display: inline-blocK;
 }
 ul.studygroup-gallery li section {
